--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -7,33 +7,22 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <ImageView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
         android:id="@+id/imageView"
         android:scaleType="centerCrop"
-        tools:src="@drawable/a"/>
-    <TextView
+        tools:src="@drawable/a"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/imageView"
-        android:layout_toEndOf="@+id/imageView"
-        android:layout_marginLeft="80dp"
-        android:layout_marginStart="80dp"
-        android:maxLines="1"
-        android:ellipsize="end"
-        tools:text="Judul"
+        android:layout_height="160dp" />
+   <ImageView
+       android:layout_width="match_parent"
+       android:layout_height="160dp"
+       android:alpha="0.3"
+       android:background="#424242"/>
+    <TextView
         android:id="@+id/textViewJudul"
-        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
-    <TextView
-        tools:text="Deskripsi"
-        android:layout_alignLeft="@+id/textViewJudul"
-        android:layout_alignStart="@+id/textViewJudul"
-        android:layout_below="@+id/textViewJudul"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:maxLines="2"
-        android:ellipsize="end"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:id="@+id/textViewDeskripsi"/>
+        android:layout_height="160dp"
+        android:gravity="center"
+        android:textColor="@android:color/white"
+        android:textAppearance="@style/TextAppearance.AppCompat.Title"
+        tools:text="Judul"/>
 </RelativeLayout>
